--- a/wave-table/table.html
+++ b/wave-table/table.html
@@ -4,13 +4,13 @@
 		<meta charset="utf-8">
 		<title>three.js</title>
 		<style>
-			body{background:#000;margin:0;overflow:hidden}
-			canvas{height:100%;margin:auto;display:block}
+			body{width:100%;background:#000;margin:0;overflow:hidden}
+			canvas{margin:auto;display:block;image-rendering:pixelated}
 		</style>
 	</head>
 	<body>
-		<script src="three.js"></script>
-		<script src="orbit.js"></script>
+		<script src="js/three.js"></script>
+		<script src="js/orbit.js"></script>
 
 		<script type="x-shader/x-vertex" id="vertexShader">
 			varying vec2 vUv;
@@ -20,23 +20,39 @@
 				vUv = uv;
 				vec3 newPosition = position;
 				float xzDistanceFromOrigin = abs(position.x) + abs(position.z);
-				newPosition.y += 3.0 * max(0.0, 0.7 - xzDistanceFromOrigin) 
-					* (sin(10.0 * (newPosition.x + newPosition.z - t)) 
-					+ cos(10.0 * (newPosition.x - newPosition.z - t)));
+				
+				// larger = more (smaller) waves. 10 is good.
+				float waveDensity = 20.0;
+
+				// larger = taller waves. 3.0 is pretfty intense.
+				float waveIntensity = 1.0;
+
+				// larger = waves further away from center of tabletop. 0.7 is moderate.
+				// we don't want this too big or the corners of the table will shift
+				// through the table.
+				float waveSpread = 0.9;
+
+				newPosition.y += waveIntensity * max(0.0, waveSpread - xzDistanceFromOrigin) 
+					* (
+						sin(waveDensity * (newPosition.x + newPosition.z) - t) + 
+						cos(waveDensity * (newPosition.x - newPosition.z) - t)
+					);
 
 				gl_Position = projectionMatrix * modelViewMatrix * vec4( newPosition, 1.0 );
 			}
 		</script>
 		<script type="x-shader/x-vertex" id="fragmentShader">
 			varying vec2 vUv;
-
 			void main() {
-				gl_FragColor = vec4(0.945, 0.922, 0.49, 1.);
+				vec3 baseColor = vec3(0.945, 0.922, 0.49);
+				gl_FragColor = vec4(baseColor, 1.);
 			}
 		</script>
 
 		<script>
-			const start = Date.now();
+			let animationTime = 0;
+			// it's square.
+			const renderSize = 500;
 
 			const backgroundColor = 0x4048A1;
 			const wireframeColor = 0xF1EB7D;
@@ -46,8 +62,16 @@
 			const legSize = 1;
 			const tableThickness = 0.7;
 
+			// how many pieces should the table be broken into for the waves
+			// (10 is sane)
+			const tableTopSegmentsX = 18;
+			const tableTopSegmentsZ = Math.round(tableTopSegmentsX * (tableZ / tableX))
+
 			const wireframe = true;
 			const isometric = true;
+
+			// GIF/APNG related
+			const framesToRecord = 50;
 
 			// SETUP
 
@@ -80,24 +104,28 @@
 					nearClip,
 					farClip
 				);
-				const tilt = 500;
+				const tilt = 15;
 
 				// center point of the table
 				const center = [(tableX)/2, 0, (tableZ)/2];
-				camera.position.set(tilt+center[0],-1*(tilt+center[1]),tilt+center[2]);
+				camera.position.set(tilt+center[0],tilt+center[1],tilt+center[2]);
 			}
 
 			camera.lookAt(0,0,0);
 
-			var renderer = new THREE.WebGLRenderer();
+			var renderer = new THREE.WebGLRenderer({
+				preserveDrawingBuffer: true
+			});
 			renderer.setClearColor( backgroundColor, 1 );
 			// renderer.setSize(window.innerWidth, window.innerHeight);
-			renderer.setSize(window.innerHeight, window.innerHeight);
+			// renderer.setSize(window.innerHeight, window.innerHeight);
+			renderer.setSize(renderSize,renderSize);
 			document.body.appendChild(renderer.domElement);
 
-			function shaderUpdateTimeUniform(shader) {
+			function shaderUpdateTimeUniform(shader, tStep) {
 				// https://www.clicktorelease.com/blog/vertex-displacement-noise-3d-webgl-glsl-three-js/
-				shader.uniforms['t'].value = 0.0002 * (Date.now() - start);
+				// 0.002 instead of tStep?
+				shader.uniforms['t'].value = tStep * (animationTime++);
 				return shader;
 			}
 
@@ -133,7 +161,7 @@
 			}
 
 			function makeTableTopShadedBox(shader) {
-				var geometry = new THREE.BoxGeometry(1, 1, 1, 10, 1, 10);
+				var geometry = new THREE.BoxGeometry(1, 1, 1, tableTopSegmentsX, 1, tableTopSegmentsZ);
 				var box = new THREE.Mesh(geometry, shader);
 				return box;
 			}
@@ -201,16 +229,44 @@
 			}
 
 			// RENDER LOOP
+			const tStep = (2 * Math.PI) / framesToRecord;
+			console.log(tStep);
+			let recordedFrames = 0;
+			let frameOutput = '';
+			let hasPrintedFrames = false;
+
 			function animate() {
 				requestAnimationFrame(animate);
 
-				tableTopShader = shaderUpdateTimeUniform(tableTopShader);
-				// scene.rotation.y += 0.01;
+				tableTopShader = shaderUpdateTimeUniform(tableTopShader, tStep);
+				
 				if(!isometric) {
 					controls.update();
 				}
 
 				renderer.render(scene, camera);
+
+				if(recordedFrames < framesToRecord) {
+					let dataUrl = renderer.domElement.toDataURL("image/png");
+					frameOutput += "|";
+					frameOutput += dataUrl;
+					recordedFrames++;
+				} else {
+					if(!hasPrintedFrames) {
+						hasPrintedFrames = true;
+						// console.log(frameOutput);
+						fetch('http://localhost:3333', {
+							mode: 'no-cors',
+							method: 'post',
+							headers: {
+								'Content-Type': 'text/plain'
+							},
+							body: frameOutput
+						}).then((res) => {
+							console.log('Done');
+						});
+					}
+				}
 			}
 			animate();
 		</script>
